@@ -230,7 +230,7 @@ public final class SepPostingsWriterImpl extends PostingsWriterBase {
     assert !omitTF;
 
     final int delta = position - lastPosition;
-    assert delta > 0 || position == 0: "position=" + position + " lastPosition=" + lastPosition;            // not quite right (if pos=0 is repeated twice we don't catch it)
+    assert delta >= 0: "position=" + position + " lastPosition=" + lastPosition;            // not quite right (if pos=0 is repeated twice we don't catch it)
     lastPosition = position;
 
     if (storePayloads) {
