@@ -193,8 +193,8 @@ public final class StandardPostingsWriter extends PostingsWriterBase {
     assert proxOut != null;
 
     final int delta = position - lastPosition;
-    
-    assert delta > 0 || position == 0: "position=" + position + " lastPosition=" + lastPosition;            // not quite right (if pos=0 is repeated twice we don't catch it)
+
+    assert delta >= 0: "position=" + position + " lastPosition=" + lastPosition;
 
     lastPosition = position;
 
