@@ -433,6 +433,10 @@ Bug fixes
   with more document deletions is requested before a reader with fewer
   deletions, provided they share some segments. (yonik)
 
+* LUCENE-2645: Fix false assertion error when same token was added one
+  after another with 0 posIncr.  (Kurosaka Teruhiko via Mike
+  McCandless)
+
 ======================= Lucene 3.x (not yet released) ================
 
 Changes in backwards compatibility policy
